--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "firebase": "^9.23.0",
-    "next": "13.4.8",
+    "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2"
   }
 }
