--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "firebase": "^9.23.0",
+    "framer-motion": "^10.12.18",
     "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
